--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: rgb(248, 180, 180);
 }
 
 h1 {
@@ -35,12 +35,12 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 2.5em;
   margin-top: .5em;
 }
 
 h3 {
-  font-family: 'Gabriela', serif;
+  font-family: 'Gabriela', 'Times New Roman', Times, serif;
   font-size: 1.5em;
   margin-top: .5em;
 }
@@ -56,7 +56,7 @@ p {
 }
 
 a {
-  color: black;
+  color: rgb(0, 102, 255);
   text-decoration: none;
 }
 
